Fix: hamburger menu visibility

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -51,7 +51,7 @@
 
 .remark {
 	font-size: 1rem;
-	font-weight: 100;
+	font-weight: 300;
 	/* margin-top: 0.5rem; */
 	margin-top: 4px;
 	color: var(--footer-primary-text);
@@ -75,6 +75,7 @@
 
 .click {
 	padding: 0 1rem;
+	margin-bottom: 1rem;
 	text-align: center;
 	color: var(--brownish-text);
 	font-weight: 500;
